[ADD]/Auth Service using JWT to Register and Login

--- a/AuthService/appsettings.json
+++ b/AuthService/appsettings.json
@@ -3,7 +3,10 @@
     "DefaultConnection": "Host=localhost;Port=5432;Database=auth_db;Username=postgres;Password=123456"
   },
   "JwtSettings": {
-    "SecretKey": "secretkey123"
+    "Key": "thisismyverystrongsecretkey1234567890",
+    "Issuer": "http://localhost:5142",
+    "Audience": "http://localhost:5142",
+    "ExpiresInMinutes": 60
   },
   "Logging": {
     "LogLevel": {
