--- a/AuthService/appsettings.json
+++ b/AuthService/appsettings.json
@@ -1,11 +1,12 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=auth_db;Username=postgres;Password=123456"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=auth_db;Username=postgres;Password=123456",
+    "Redis": "redis:6379"
   },
   "JwtSettings": {
     "Key": "thisismyverystrongsecretkey1234567890",
-    "Issuer": "http://localhost:5142",
-    "Audience": "http://localhost:5142",
+    "Issuer": "http://localhost:5001",
+    "Audience": "http://localhost:5001",
     "ExpiresInMinutes": 60
   },
   "Logging": {
