[ADD]/Configure docker-compose file to package the entire system

--- a/AuthService/appsettings.json
+++ b/AuthService/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=auth_db;Username=postgres;Password=123456",
+    "DefaultConnection": "Host=auth-postgres;Port=5432;Database=auth_db;Username=postgres;Password=123456",
     "Redis": "redis:6379"
   },
   "JwtSettings": {
