--- a/FileService/appsettings.Development.json
+++ b/FileService/appsettings.Development.json
@@ -4,5 +4,19 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Minio": {
+    "Endpoint": "localhost:9000",
+    "AccessKey": "minio",
+    "SecretKey": "minio123",
+    "BucketName": "mybucket",
+    "UseSSL": false
+  },
+  "RabbitMQ": {
+    "HostName": "localhost",
+    "Port": 5672,
+    "UserName": "guest",
+    "Password": "guest",
+    "VirtualHost": "/"
   }
 }
