--- a/FileService/appsettings.json
+++ b/FileService/appsettings.json
@@ -7,10 +7,17 @@
   },
   "AllowedHosts": "*",
   "Minio": {
-    "Endpoint": "localhost:9000",
+    "Endpoint": "minio:9000",
     "AccessKey": "minio",
     "SecretKey": "minio123",
     "BucketName": "mybucket",
     "UseSSL": false
+  },
+  "RabbitMQ": {
+    "HostName": "rabbitmq",
+    "Port": 5672,
+    "UserName": "guest",
+    "Password": "guest",
+    "VirtualHost": "/"
   }
 }
