--- a/WorkerService/appsettings.json
+++ b/WorkerService/appsettings.json
@@ -2,7 +2,20 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "WorkerService": "Information"
     }
+  },
+  "RabbitMQ": {
+    "HostName": "rabbitmq",
+    "Port": 5672,
+    "UserName": "guest",
+    "Password": "guest",
+    "VirtualHost": "/"
+  },
+  "FileProcessing": {
+    "MaxRetryAttempts": 3,
+    "RetryDelaySeconds": 5,
+    "BatchSize": 10
   }
 }
