--- a/FileService/appsettings.json
+++ b/FileService/appsettings.json
@@ -6,6 +6,14 @@
     }
   },
   "AllowedHosts": "*",
+  "JwtSettings": {
+    "Key": "thisismyverystrongsecretkey1234567890",
+    "Issuer": "http://localhost:5001",
+    "Audience": "http://localhost:5001"
+  },
+  "AuthService": {
+    "Url": "http://auth-service"
+  },
   "Minio": {
     "Endpoint": "minio:9000",
     "AccessKey": "minio",
