[ADD]/Using middleware for checking token

--- a/AuthService/appsettings.json
+++ b/AuthService/appsettings.json
@@ -15,5 +15,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RabbitMQ": {
+    "HostName": "rabbitmq",
+    "Port": 5672,
+    "UserName": "guest",
+    "Password": "guest",
+    "VirtualHost": "/"
+  }
 }
