--- a/AuthService/appsettings.Development.json
+++ b/AuthService/appsettings.Development.json
@@ -7,12 +7,19 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=auth_db;Username=postgres;Password=123456",
-    "Redis": "redis:6379"
+    "Redis": "redis:6379" 
   },
   "JwtSettings": {
     "Key": "thisismyverystrongsecretkey1234567890",
     "Issuer": "http://localhost:5001",
     "Audience": "http://localhost:5001",
     "ExpiresInMinutes": 60
+  },
+  "RabbitMQ": {
+    "HostName": "rabbitmq",
+    "Port": 5672,
+    "UserName": "guest",
+    "Password": "guest",
+    "VirtualHost": "/"
   }
 }
