--- a/EmailService/appsettings.json
+++ b/EmailService/appsettings.json
@@ -2,8 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information",
-      "WorkerService": "Information"
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "RabbitMQ": {
@@ -13,9 +12,8 @@
     "Password": "guest",
     "VirtualHost": "/"
   },
-  "FileProcessing": {
-    "MaxRetryAttempts": 3,
-    "RetryDelaySeconds": 5,
-    "BatchSize": 10
+  "Smtp": {
+    "User": "ilubeos@gmail.com",
+    "Password": "qgii edyv opxx wdqn"
   }
 }
