--- a/GrpcGreeter/appsettings.json
+++ b/GrpcGreeter/appsettings.json
@@ -5,18 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedHosts": "*",
   "Minio": {
-    "Endpoint": "localhost:9000",
+    "Endpoint": "minio:9000",
     "AccessKey": "minio",
     "SecretKey": "minio123",
     "BucketName": "mybucket",
     "UseSSL": false
   },
-  "RabbitMQ": {
-    "HostName": "localhost",
-    "Port": 5672,
-    "UserName": "guest",
-    "Password": "guest",
-    "VirtualHost": "/"
+  "Kestrel": {
+    "EndpointDefaults": {
+      "Protocols": "Http2"
+    }
   }
 }
