--- a/EmailService/appsettings.json
+++ b/EmailService/appsettings.json
@@ -14,6 +14,6 @@
   },
   "Smtp": {
     "User": "ilubeos@gmail.com",
-    "Password": "qgii edyv opxx wdqn"
+    "Password": "qgii edyv opxx wdqn comment"
   }
 }
