--- a/GrpcGreeter/appsettings.Development.json
+++ b/GrpcGreeter/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "GrpcEndpoints": {
+    "AuthService": "http://localhost:5001",
+    "FileService": "http://localhost:5002"
   }
 }
