--- a/GrpcGreeter/appsettings.json
+++ b/GrpcGreeter/appsettings.json
@@ -15,7 +15,18 @@
   },
   "Kestrel": {
     "EndpointDefaults": {
-      "Protocols": "Http2"
+      "AuthService": {
+        "Url": "http://localhost:5001",
+        "Protocols": "Http1"
+      },
+      "FileService": {
+        "Url": "http://localhost:5002",
+        "Protocols": "Http1"
+      }
     }
+  },
+  "GrpcEndpoints": {
+    "AuthService": "http://auth-service:5003",
+    "FileService": "http://file-service:5004"
   }
 }
