--- a/FileService/FileService.csproj
+++ b/FileService/FileService.csproj
@@ -29,4 +29,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Protobuf Include="../GrpcGreeter/Protos/file.proto" GrpcServices="Server" />
+  </ItemGroup>
+
 </Project>
