[REFACTOR]/Clean up unused code, standardize logging, and optimize system

--- a/AuthService/appsettings.json
+++ b/AuthService/appsettings.json
@@ -22,5 +22,10 @@
     "UserName": "guest",
     "Password": "guest",
     "VirtualHost": "/"
+  },
+  "AuthPolicy": {
+    "MaxFailedLoginAttempts": 3,
+    "AccountLockMinutes": 5,
+    "ResetPasswordTokenExpiryMinutes": 15
   }
 }
