--- a/EmailService/appsettings.json
+++ b/EmailService/appsettings.json
@@ -14,6 +14,18 @@
   },
   "Smtp": {
     "User": "ilubeos@gmail.com",
-    "Password": "qgii edyv opxx wdqn comment"
+    "Password": "qgii edyv opxx wdqn",
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "EnableSsl": true
+  },
+  "EmailPolicy": {
+    "ResetTokenExpiryMinutes": 15,
+    "RegisterSubject": "Welcome to Microservice System!",
+    "FileUploadSubject": "File Uploaded Successfully",
+    "FileDownloadSubject": "File Download Notification",
+    "FileDeleteSubject": "File Deleted Successfully",
+    "ResetPasswordSubject": "Password Reset Request - Microservice System",
+    "ChangePasswordSubject": "Password Changed Successfully - Microservice System"
   }
 }
