[ADD]/Implement Google authentication support, including user registration and login via Google, and update user model to accommodate Google-specific fields.

--- a/AuthService/appsettings.json
+++ b/AuthService/appsettings.json
@@ -27,5 +27,9 @@
     "MaxFailedLoginAttempts": 3,
     "AccountLockMinutes": 5,
     "ResetPasswordTokenExpiryMinutes": 15
+  },
+  "GoogleAuth": {
+    "ClientId": "YOUR_GOOGLE_CLIENT_ID",
+    "ClientSecret": "YOUR_GOOGLE_CLIENT_SECRET"
   }
 }
