--- a/EmailService/appsettings.json
+++ b/EmailService/appsettings.json
@@ -14,7 +14,7 @@
   },
   "Smtp": {
     "User": "ilubeos@gmail.com",
-    "Password": "qgii edyv opxx wdqn",
+    "Password": "qgii edyv opxx wdqn comment",
     "Host": "smtp.gmail.com",
     "Port": 587,
     "EnableSsl": true
