[ADD]/Integrate Hunter email verification service

--- a/AuthService/appsettings.json
+++ b/AuthService/appsettings.json
@@ -29,7 +29,8 @@
     "ResetPasswordTokenExpiryMinutes": 15
   },
   "GoogleAuth": {
-    "ClientId": "YOUR_GOOGLE_CLIENT_ID",
-    "ClientSecret": "YOUR_GOOGLE_CLIENT_SECRET"
-  }
+    "ClientId": "Your Google Client ID",
+    "ClientSecret": "Your Google Client Secret"
+  },
+  "HunterApiKey": "Your Hunter API Key"
 }
