[ADD]/Implement email verification feature, including token generation, verification endpoint, and updates to user model and email notifications.

--- a/AuthService/appsettings.json
+++ b/AuthService/appsettings.json
@@ -29,8 +29,11 @@
     "ResetPasswordTokenExpiryMinutes": 15
   },
   "GoogleAuth": {
-    "ClientId": "Your Google Client ID",
-    "ClientSecret": "Your Google Client Secret"
+    "ClientId": "GOOGLE_CLIENT_ID",
+    "ClientSecret": "GOOGLE_CLIENT_SECRET"
   },
-  "HunterApiKey": "Your Hunter API Key"
+  "HunterApiKey": "HUNTER_API_KEY",
+  "Frontend": {
+    "BaseUrl": "http://127.0.0.1:5500"
+  }
 }
