[ADD]/Add frontend service to Docker Compose, update AuthService with new user management features, and enhance email service with HTML templates for notifications.

--- a/AuthService/appsettings.Development.json
+++ b/AuthService/appsettings.Development.json
@@ -21,5 +21,13 @@
     "UserName": "guest",
     "Password": "guest",
     "VirtualHost": "/"
+  },
+  "GoogleAuth": {
+    "ClientId": "GoogleClientId",
+    "ClientSecret": "GoogleClientSecret"
+  },
+  "HunterApiKey": "HunterApiKey",
+  "Frontend": {
+    "BaseUrl": "http://localhost:8080"
   }
 }
