--- a/AuthService/appsettings.json
+++ b/AuthService/appsettings.json
@@ -34,6 +34,6 @@
   },
   "HunterApiKey": "HUNTER_API_KEY",
   "Frontend": {
-    "BaseUrl": "http://127.0.0.1:5500"
+    "BaseUrl": "http://localhost:8080"
   }
 }
