[ADD]/Integrate UserService into the microservices architecture, including Docker configuration, project structure, and initial implementation of user management features.

--- a/EmailService/appsettings.json
+++ b/EmailService/appsettings.json
@@ -19,13 +19,16 @@
     "Port": 587,
     "EnableSsl": true
   },
+  "Frontend": {
+    "BaseUrl": "http://localhost:8080"
+  },
   "EmailPolicy": {
     "ResetTokenExpiryMinutes": 15,
-    "RegisterSubject": "Welcome to Microservice System!",
+    "RegisterSubject": "Welcome to iNFJZ System!",
     "FileUploadSubject": "File Uploaded Successfully",
     "FileDownloadSubject": "File Download Notification",
     "FileDeleteSubject": "File Deleted Successfully",
-    "ResetPasswordSubject": "Password Reset Request - Microservice System",
-    "ChangePasswordSubject": "Password Changed Successfully - Microservice System"
+    "ResetPasswordSubject": "Password Reset Request - iNFJZ System",
+    "ChangePasswordSubject": "Password Changed Successfully - iNFJZ System"
   }
 }
