--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -14,13 +14,13 @@ server {
         add_header 'Access-Control-Allow-Origin' '*' always;
     }
 
-    location ~ ^/admin-dashboard$ {
-        try_files /html/admin/dashboard.html /html/index.html;
+    location ~ ^/app-user-list$ {
+        try_files /html/admin/app-user-list.html /html/index.html;
         add_header 'Access-Control-Allow-Origin' '*' always;
     }
 
-    location ~ ^/admin-users$ {
-        try_files /html/admin/users.html /html/index.html;
+    location ~ ^/admin/app-user-list.html$ {
+        try_files /html/admin/app-user-list.html /html/index.html;
         add_header 'Access-Control-Allow-Origin' '*' always;
     }
 
