[UPDATE]/Enhance user management features by adding support for deleted users, integrating Redis caching, and implementing RabbitMQ for messaging. Update Docker configuration and email notifications for account restoration.

--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -18,5 +18,12 @@
     "Issuer": "http://localhost:5001",
     "Audience": "http://localhost:5001",
     "ExpiresInMinutes": 60
+  },
+  "RabbitMQ": {
+    "HostName": "rabbitmq",
+    "Port": 5672,
+    "UserName": "guest",
+    "Password": "guest",
+    "VirtualHost": "/"
   }
 }
