--- a/UserService/appsettings.Development.json
+++ b/UserService/appsettings.Development.json
@@ -17,5 +17,12 @@
     "Issuer": "http://localhost:5001",
     "Audience": "http://localhost:5001",
     "ExpiresInMinutes": 60
+  },
+  "RabbitMQ": {
+    "HostName": "rabbitmq",
+    "Port": 5672,
+    "UserName": "guest",
+    "Password": "guest",
+    "VirtualHost": "/"
   }
 }
