[UPDATE]/Refactor authentication and frontend routing by updating Google authentication credentials, modifying redirect URLs, and enhancing user experience across various authentication pages.

--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -2,28 +2,53 @@ server {
     listen 80;
     server_name localhost;
     root /usr/share/nginx/html;
-    index html/index.html;
+    index html/auth/login.html;
 
-    location ~ ^/(login|register|verify-email|reset-password|forgot-password|account-activated|change-password)$ {
+    # Root trả về login.html (mặc định vào là login)
+    location = / {
+        try_files /html/auth/login.html =404;
+        add_header 'Access-Control-Allow-Origin' '*' always;
+    }
+    # /login và /auth/login.html đều trả về login.html
+    location = /login {
+        try_files /html/auth/login.html =404;
+        add_header 'Access-Control-Allow-Origin' '*' always;
+    }
+    location = /auth/login.html {
+        try_files /html/auth/login.html =404;
+        add_header 'Access-Control-Allow-Origin' '*' always;
+    }
+
+    # Auth routes with flexible pattern matching
+    location ~ ^/(register|verify-email|reset-password|forgot-password|account-activated|change-password)$ {
         try_files /html/auth/$1.html /html/index.html;
         add_header 'Access-Control-Allow-Origin' '*' always;
     }
 
-    location ~ ^/auth/(login|register|verify-email|reset-password|forgot-password|account-activated|change-password)\.html$ {
+    location ~ ^/auth/(register|verify-email|reset-password|forgot-password|account-activated|change-password)\.html$ {
         try_files /html/auth/$1.html /html/index.html;
         add_header 'Access-Control-Allow-Origin' '*' always;
     }
 
-    location ~ ^/app-user-list$ {
-        try_files /html/admin/app-user-list.html /html/index.html;
+    # Admin routes - flexible pattern matching for all admin pages
+    location ~ ^/admin/?$ {
+        try_files /html/admin/index.html /html/index.html;
         add_header 'Access-Control-Allow-Origin' '*' always;
     }
 
-    location ~ ^/admin/app-user-list.html$ {
-        try_files /html/admin/app-user-list.html /html/index.html;
+    # Flexible admin page routing - matches any admin page
+    location ~ ^/admin/([^/]+)\.html$ {
+        try_files /html/admin/$1.html /html/index.html;
         add_header 'Access-Control-Allow-Origin' '*' always;
     }
 
+    # Direct page access without /admin/ prefix
+    location ~ ^/(user-list|all-users|deactive-users|index)\.html$ {
+        try_files /html/admin/$1.html /html/index.html;
+        add_header 'Access-Control-Allow-Origin' '*' always;
+    }
+
+    # API routes
     location /api/ {
         proxy_pass http://auth-service:80/;
         proxy_set_header Host $host;
@@ -37,17 +62,20 @@ server {
         add_header 'Access-Control-Max-Age' 1728000 always;
     }
 
+    # Static assets with caching
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        add_header 'Access-Control-Allow-Origin' '*' always;
+    }
+
+    # Default fallback - try to serve the file directly, rồi fallback về admin/index.html
     location / {
-        try_files $uri $uri/ /html/index.html;
+        try_files $uri $uri/ /html/admin/index.html;
         add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
         add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
         add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
         add_header 'Access-Control-Max-Age' 1728000 always;
-    }
-
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
     }
 } 
