[UPDATE]/Add multi-language support across services by introducing language parameters in various DTOs, enhancing email notifications, and refining frontend assets for improved user experience.

--- a/EmailService/EmailService.csproj
+++ b/EmailService/EmailService.csproj
@@ -5,11 +5,13 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>dotnet-EmailService-19978997-985c-416d-a1a9-01cf6d4f8a48</UserSecretsId>
+    <EnableDefaultContentItems>false</EnableDefaultContentItems>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.71.0" />
     <PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.71.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
 
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
