--- a/EmailService/appsettings.json
+++ b/EmailService/appsettings.json
@@ -20,15 +20,10 @@
     "EnableSsl": true
   },
   "Frontend": {
-    "BaseUrl": "http://localhost:8080"
+    "BaseUrl": "http://localhost:8080",
+    "Path": "/app/frontend/assets/lang"
   },
   "EmailPolicy": {
-    "ResetTokenExpiryMinutes": 15,
-    "RegisterSubject": "Welcome to iNFJZ System!",
-    "FileUploadSubject": "File Uploaded Successfully",
-    "FileDownloadSubject": "File Download Notification",
-    "FileDeleteSubject": "File Deleted Successfully",
-    "ResetPasswordSubject": "Password Reset Request - iNFJZ System",
-    "ChangePasswordSubject": "Password Changed Successfully - iNFJZ System"
+    "ResetTokenExpiryMinutes": 15
   }
 }
