--- a/AuthService/appsettings.Development.json
+++ b/AuthService/appsettings.Development.json
@@ -23,10 +23,10 @@
     "VirtualHost": "/"
   },
   "GoogleAuth": {
-    "ClientId": "GoogleClientId",
-    "ClientSecret": "GoogleClientSecret"
+    "ClientId": "157841978934-fmgq60lshk9iq65s7h37mc7ta78m8nu3.apps.googleusercontent.com",
+    "ClientSecret": "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"
   },
-  "HunterApiKey": "HunterApiKey",
+  "HunterApiKey": "22cc5029481a4e19865463acbfc2a7977e18cdf9",
   "Frontend": {
     "BaseUrl": "http://localhost:8080"
   }
