--- a/AuthService/appsettings.json
+++ b/AuthService/appsettings.json
@@ -29,10 +29,10 @@
     "ResetPasswordTokenExpiryMinutes": 15
   },
   "GoogleAuth": {
-    "ClientId": "GOOGLE_CLIENT_ID",
-    "ClientSecret": "GOOGLE_CLIENT_SECRET"
+    "ClientId": "157841978934-fmgq60lshk9iq65s7h37mc7ta78m8nu3.apps.googleusercontent.com",
+    "ClientSecret": "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"
   },
-  "HunterApiKey": "HUNTER_API_KEY",
+  "HunterApiKey": "22cc5029481a4e19865463acbfc2a7977e18cdf9",
   "Frontend": {
     "BaseUrl": "http://localhost:8080"
   }
