[UPDATE]/Enhance multi-language support by updating email templates, adjusting language handling in frontend components, and refining language dropdown functionality across various pages.

--- a/EmailService/appsettings.Development.json
+++ b/EmailService/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "Frontend": {
-    "BaseUrl": "http://localhost:8080"
+    "BaseUrl": "http://localhost:8080",
+    "Path": "/app/Frontend/assets/lang"
   }
 }
