[ADD]/File Management features

--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -9,11 +9,13 @@ server {
         try_files /html/auth/login.html =404;
         add_header 'Access-Control-Allow-Origin' '*' always;
     }
+    
     # /login và /auth/login.html đều trả về login.html
     location = /login {
         try_files /html/auth/login.html =404;
         add_header 'Access-Control-Allow-Origin' '*' always;
     }
+    
     location = /auth/login.html {
         try_files /html/auth/login.html =404;
         add_header 'Access-Control-Allow-Origin' '*' always;
@@ -36,21 +38,37 @@ server {
         add_header 'Access-Control-Allow-Origin' '*' always;
     }
 
-    # Flexible admin page routing - matches any admin page
-    location ~ ^/admin/([^/]+)\.html$ {
-        try_files /html/admin/$1.html /html/index.html;
+    # Admin subfolder routing - matches admin/subfolder/page.html
+    location ~ ^/admin/([^/]+)/([^/]+)\.html$ {
+        try_files /html/admin/$1/$2.html /html/admin/index.html;
         add_header 'Access-Control-Allow-Origin' '*' always;
     }
 
-    # Direct page access without /admin/ prefix
-    location ~ ^/(user-list|all-users|deactive-users|index)\.html$ {
-        try_files /html/admin/$1.html /html/index.html;
+    # Admin direct page routing - matches admin/page.html
+    location ~ ^/admin/([^/]+)\.html$ {
+        try_files /html/admin/$1.html /html/admin/index.html;
+        add_header 'Access-Control-Allow-Origin' '*' always;
+    }
+
+    # Handle /admin/files/files.html redirect to /admin/files/files.html (avoid double files)
+    location = /admin/files/files/files.html {
+        return 301 /admin/files/files.html;
+    }
+
+    # Handle /admin/files/files/upload-file.html redirect to /admin/files/upload-file.html
+    location = /admin/files/files/upload-file.html {
+        return 301 /admin/files/upload-file.html;
+    }
+
+    # Direct page access without /admin/ prefix (legacy support)
+    location ~ ^/(user-list|all-users|deactive-users|index|files|upload-file)\.html$ {
+        try_files /html/admin/$1.html /html/admin/index.html;
         add_header 'Access-Control-Allow-Origin' '*' always;
     }
 
     # API routes
     location /api/ {
-        proxy_pass http://auth-service:80/;
+        proxy_pass http://gateway-api:80/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
